--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,9 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Index</title>
-    meta
+    <title>Hello World</title>
   </head>
   <body>
-    body
+    <h1>Hello World</h1>
   </body>
 </html>
